[SWOZO-19] dynamic course list & course view, error view
