# web-app-frontend/src/api/models/ActivityLinkInfo.ts
@@ -1,0 +1,80 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenAPI definition
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: v0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface ActivityLinkInfo
+ */
+export interface ActivityLinkInfo {
+    /**
+     * 
+     * @type {string}
+     * @memberof ActivityLinkInfo
+     */
+    url?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ActivityLinkInfo
+     */
+    serviceName: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ActivityLinkInfo
+     */
+    connectionInstruction: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ActivityLinkInfo
+     */
+    connectionInfo?: string;
+}
+
+export function ActivityLinkInfoFromJSON(json: any): ActivityLinkInfo {
+    return ActivityLinkInfoFromJSONTyped(json, false);
+}
+
+export function ActivityLinkInfoFromJSONTyped(json: any, ignoreDiscriminator: boolean): ActivityLinkInfo {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'url': !exists(json, 'url') ? undefined : json['url'],
+        'serviceName': json['serviceName'],
+        'connectionInstruction': json['connectionInstruction'],
+        'connectionInfo': !exists(json, 'connectionInfo') ? undefined : json['connectionInfo'],
+    };
+}
+
+export function ActivityLinkInfoToJSON(value?: ActivityLinkInfo | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'url': value.url,
+        'serviceName': value.serviceName,
+        'connectionInstruction': value.connectionInstruction,
+        'connectionInfo': value.connectionInfo,
+    };
+}
+
